--- a/motix-manager-support.html
+++ b/motix-manager-support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOTIX Leader | Flowchart Coach</title>
+    <title>MOTIX Manager | Flowchart Coach</title>
     <style>
         :root {
             /* MOTIX NEW PALETTE */
